[package]
name = "atoms"
version = "1.1.4"
authors = ["Curtis Millar <curtis@curtism.me>", "Clark Gaebel <cg.wowus.cg@gmail.com>"]

documentation = "https://docs.rs/atoms"
repository    = "https://github.com/studley13/atoms"

readme = "README.md"

keywords = [ "atom", "sexp", "parsing", "s-expression", "file-format" ]

description = "S-expression parser and pretty-printer."

license = "MIT"
